# tth

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: adapter-contract-reviewer.md  av-sync-reviewer.md
.claude/skills/new-adapter/: SKILL.md
.claude/skills/run-phases/: SKILL.md
client/: avatar_renderer.js  demo.html  demo.js
config/: base.yaml
config/profiles/: api_only_mac.yaml  offline_mock.yaml
docs/: ADAPTERS.md  ARCHITECTURE.md  CODEBASE_DESIGN.md  IMPLEMENTATION_PLAN_v1_archived.md  MEMORY.md  PLAN_REVIEW.md  PROGRESS.md  QUICKREF.md  REALTIME_API.md  SYSTEM_DESIGN_DIAGRAMS.md  plan_v1.md
scripts/: _phase_common.py  demo.py  interactive_demo.py  interactive_test.py  phase_01_unit.py  phase_02_offline_smoke.py  phase_03_offline_multiturn.py  phase_04_live_openai.py  phase_video_frames.py  run_phased_tests.py  test_phase1_core.py  test_phase2_llm.py  test_phase3_tts.py  test_phase4_pipeline.py  test_phase5_api.py  verify_push_pipeline.py
src/tth/: __init__.py
src/tth/adapters/: __init__.py  base.py
src/tth/adapters/avatar/: __init__.py  audio_utils.py  buffer.py  cloud_base.py  did_cloud.py  did_streaming.py  liveportrait_cloud.py  metrics.py  mock_cloud.py  simli.py  stub.py
src/tth/adapters/llm/: __init__.py  mock_llm.py  openai_api.py
src/tth/adapters/realtime/: __init__.py  openai_realtime.py
src/tth/adapters/tts/: __init__.py  mock_tts.py  openai_tts.py
src/tth/alignment/: drift.py
src/tth/api/: main.py  routes.py  schemas.py
src/tth/api/static/: av_sync.js  avatar_renderer.js  demo.html  demo.js  did_webrtc.js  index.html
src/tth/control/: __init__.py  mapper.py  personas.py
src/tth/core/: __init__.py  config.py  logging.py  registry.py  types.py
src/tth/pipeline/: __init__.py  orchestrator.py  session.py
tests/: test_adapters.py  test_avatar_generation.py  test_mapper.py  test_simli_adapter.py  test_types.py
